pacman-nodejs-app/ingress/pacman-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pacman
            port:
              number: 9999
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pacman-dev
            port:
              number: 8888
