pacman-nodejs-app/ingress/pacman-seb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pacman
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  backend:
    serviceName: pacman
    servicePort: 80
